[build-system]
# In setuptools before version 61.0.0 there is no support for writing the
# project's packaging metadata in pyproject.toml
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linuxfabrik-lib"
version = "4.2.0"
description = "Python libraries used in various Linuxfabrik projects, including the 'Linuxfabrik Monitoring Plugins' project."
readme = "README.md"
authors = [
    { name = "Linuxfabrik GmbH, Zurich, Switzerland", email = "info@linuxfabrik.ch" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
keywords = ["lib", "libs", "monitoring", "monitoring plugins", "icinga", "nagios"]
dependencies = [
    "beautifulsoup4",
    "httpx[http2]",
    "lxml",
    "netifaces",
    "psutil",
    "pymysql",
    "pypsrp",
    "PySmbClient",
    "pywinrm",
    "smbprotocol",
    "xmltodict",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Linuxfabrik/lib"
Documentation = "https://github.com/Linuxfabrik/lib/blob/master/README.md"
Source = "https://github.com/Linuxfabrik/lib"
Tracker = "https://github.com/Linuxfabrik/lib/issues"
Download = "https://github.com/Linuxfabrik/lib/releases"

[tool.ruff]
target-version = 'py39'

[tool.ruff.lint]
select = [
    'B',    # flake8-bugbear (potential bugs)
    'C4',   # flake8-comprehensions
    'E',    # pycodestyle errors
    'F',    # pyflakes (logic errors)
    'I',    # isort (import sorting)
    'RUF',  # Ruff-specific rules
    'SIM',  # flake8-simplify
    'UP',   # pyupgrade (modernize syntax for py39+)
    'W',    # pycodestyle warnings
]
ignore = [
    'E501',    # line too long (handled by code review, not auto-enforcement)
    'RUF002',  # ambiguous Unicode in docstrings (typographic quotes from docs)
    'RUF003',  # ambiguous Unicode in comments (en dashes in ASCII art)
    'SIM102',  # nested if statements (sometimes clearer than combined conditions)
    'SIM105',  # contextlib.suppress (try/except/pass is more explicit)
    'UP009',   # UTF-8 encoding declaration (we keep our standard file header)
    'UP015',   # redundant open() mode (we keep explicit modes for clarity)
]

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true

[tool.bandit]
# B110 (try/except/pass) and B112 (try/except/continue): intentional patterns
# in lib for graceful degradation - cleanup errors must not crash callers.
# B311 (pseudo-random): lib uses `random` for non-cryptographic purposes only.
skips = ['B110', 'B112', 'B311']

[tool.setuptools]
# packages are not in the root of the repository or do not correspond exactly to
# the directory structure, so we need to configure package_dir
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
package-dir = {"lib" = "."}
# Declare the package explicitly. Without this, setuptools auto-discovery walks
# the repository root with followlinks=True. The per-module `tests/*/lib`
# symlinks point back to the root, so the walk recurses through them endlessly
# and the build hangs. There is a single flat `lib` package, so list it directly.
packages = ["lib"]
